--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="">
     <title>Document</title>
 </head>
+
 <body>
-   <p>
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit delectus qui suscipit iste sunt ad molestias veniam itaque cumque voluptate distinctio, ex accusantium expedita repellendus quam eum, reprehenderit consequatur omnis!
-   </p> 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit delectus qui suscipit iste sunt ad molestias
+        veniam itaque cumque voluptate distinctio, ex accusantium expedita repellendus quam eum, reprehenderit
+        consequatur omnis!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit alias omnis ullam quia facere. Maiores
+        dignissimos est vitae necessitatibus molestias maxime, illum optio quidem at corporis autem aliquam!
+        Praesentium.
+    </p>
 </body>
+
 </html>
